--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
-                            <!--TODO : プロフ画像支給後更新必要 -->
-                            <img src="images/speaker2.png" alt="" class="image"/>
+                            <img src="images/prof2.png" alt="" class="image"/>
                             <div class="inner">
                                 <h4>いろふさん</h4>
                                 <p>大阪を中心に活躍するベテランのプログラマー</p>
