--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>現場で使える！実践Git管理（はらかみさん）</td>
+                                    <td>めざせ脱初心者！現場で使えるGit運用術（はらかみさん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
